# elrust

./: .gitignore
.github/workflows/: lint_master.yml  pullrequest_check.yml
application/apps/core/session/: Cargo.toml
application/apps/core/session/src/: progress.rs
application/apps/core/session/src/state/: mod.rs
application/apps/core/session/src/unbound/: api.rs
application/apps/core/session/src/unbound/commands/: mod.rs
application/apps/indexer/: Cargo.toml
application/apps/indexer/session/: Cargo.toml
application/apps/precompiled/plugin/: Cargo.toml
application/apps/precompiled/plugin_test/: Cargo.toml
application/apps/precompiled/updater/: log4rs.yaml
application/apps/rustcore/rs-bindings/: Cargo.toml  log4rs.yaml
application/client/: angular.json  package.json  tsconfig.json
application/client/src/: index.html
application/holder/: package.json
application/holder/hooks/: afterSign.js
application/holder/resources/linux/: elrust.desktop
application/holder/src/loaders/: cli.ts  envvars.ts  logger.ts  system.ts
application/holder/src/modules/: github.ts  net.ts
application/holder/src/register/: global.ts
application/holder/src/service/: bridge.ts  cli.ts  hotkeys.ts  menu.ts  paths.ts  production.ts  sessions.ts  unbound.ts  (+1 more)
application/platform/: package.json
application/platform/env/: globals.ts  index.ts  scope.ts
scripts/: tasks.rb
scripts/elements/: bindings.rb  client.rb  holder.rb  mod.rb  release.rb
scripts/env/: paths.rb
scripts/interective/: menu.rb
scripts/tools/: compressor.rb  reporter.rb  shell.rb
(+110 files in other folders)
