[package]
name = "session"
version = "0.1.0"
authors = ["esrlabs.com"]
edition = "2021"

[dependencies]
crossbeam-channel = "0.5"
dirs = "5.0"
futures = "0.3"
lazy_static = "1.4"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.24", features = ["full"] }
tokio-stream = "0.1"
tokio-util = "0.7"
uuid = { version = "1.3", features = ["serde", "v4"] }
tokio-serial = "5.4"
libloading = "0.8.0"

[dev-dependencies]
lazy_static = "1.4"
